RESOLVED FIXED79378
Pan scroll icon is painted at incorrect coordinates in frames
https://bugs.webkit.org/show_bug.cgi?id=79378
Summary Pan scroll icon is painted at incorrect coordinates in frames
Cem Kocagil
Reported 2012-02-23 10:49:52 PST
The middle click pan scroll icon that is painted on the page is painted at incorrect coordinates when it's in an iframe. Tested with Chrome stable, Chrome canary and Safari 5 on Windows. I didn't test on Linux but it should be buggy there too. I attached a repro file with instructions.
Attachments
Repro (426 bytes, text/html)
2012-02-23 10:50 PST, Cem Kocagil
no flags
Patch (1.32 KB, patch)
2012-02-23 11:53 PST, Cem Kocagil
no flags
Patch (1.50 KB, patch)
2012-03-05 07:05 PST, Cem Kocagil
no flags
Screenshots before and after (32.68 KB, image/png)
2012-03-09 09:17 PST, Cem Kocagil
no flags
Cem Kocagil
Comment 1 2012-02-23 10:50:24 PST
Cem Kocagil
Comment 2 2012-02-23 11:53:16 PST
Cem Kocagil
Comment 3 2012-02-23 15:19:04 PST
Waiting for review
WebKit Commit Bot
Comment 4 2012-02-24 01:55:23 PST
Attachment 128521 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files']" exit_code: 1 Total errors found: 0 in 0 files If any of these errors are false positives, please file a bug against check-webkit-style.
Antonio Gomes
Comment 5 2012-02-24 08:11:58 PST
do you want the Pan Icon to be painted in mainframe contents coordinates? or mainframe viewport coordinates?
Cem Kocagil
Comment 6 2012-02-24 10:13:24 PST
(In reply to comment #5) > do you want the Pan Icon to be painted in mainframe contents coordinates? or mainframe viewport coordinates? It seems like the parent frame (not the owner, its parent) is doing the painting. I'm converting the main frame viewport coordinates to the parent frame's content coordinates. (I see that there are many ScrollView/Widget methods to do some conversions, but I couldn't find the right one. Please inform me if there is such method.)
Cem Kocagil
Comment 7 2012-03-05 07:05:56 PST
Cem Kocagil
Comment 8 2012-03-09 09:17:56 PST
Created attachment 131045 [details] Screenshots before and after
Antonio Gomes
Comment 9 2012-03-09 12:59:09 PST
Comment on attachment 130124 [details] Patch Looks sane to me. I wish we had a way to test it.
WebKit Review Bot
Comment 10 2012-03-09 17:53:38 PST
Comment on attachment 130124 [details] Patch Rejecting attachment 130124 [details] from commit-queue. cem.kocagil+webkit@gmail.com does not have committer permissions according to http://trac.webkit.org/browser/trunk/Tools/Scripts/webkitpy/common/config/committers.py. - If you do not have committer rights please read http://webkit.org/coding/contributing.html for instructions on how to use bugzilla flags. - If you have committer rights please correct the error in Tools/Scripts/webkitpy/common/config/committers.py by adding yourself to the file (no review needed). The commit-queue restarts itself every 2 hours. After restart the commit-queue will correctly respect your committer rights.
WebKit Review Bot
Comment 11 2012-03-09 19:54:06 PST
Comment on attachment 130124 [details] Patch Clearing flags on attachment: 130124 Committed r110366: <http://trac.webkit.org/changeset/110366>
WebKit Review Bot
Comment 12 2012-03-09 19:54:12 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.