Pan scroll icon is painted at incorrect coordinates in frames https://bugs.webkit.org/show_bug.cgi?id=79378

Convert client coordinates to parent ScrollView coordinates

Patch by Cem Kocagil <cem.kocagil@gmail.com> on 2012-03-05
Reviewed by Antonio Gomes

* platform/ScrollView.cpp:
(WebCore::ScrollView::paintPanScrollIcon):

Canonical link: https://commits.webkit.org/97958@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110366 268f45cc-cd09-0410-ab3c-d52691b4dbfc